log/build_2025-08-09_20-50-56/soma_cube_rl_bridge/stderr.log
/home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/rl_env_node.cpp: In member function ‘bool soma_cube_rl_bridge::RLEnvironmentNode::resetToHome()’:
/home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/rl_env_node.cpp:394:18: error: no match for ‘operator=’ (operand types are ‘dsr_msgs2::srv::MoveJoint_Request_<std::allocator<void> >::_pos_type’ {aka ‘std::array<double, 6>’} and ‘std::vector<double, std::allocator<double> >’)
  394 |   request->pos = home_joint_positions_;
      |                  ^~~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/11/tuple:39,
                 from /usr/include/c++/11/bits/unique_ptr.h:37,
                 from /usr/include/c++/11/memory:76,
                 from /opt/ros/humble/include/rclcpp/rclcpp/rclcpp.hpp:153,
                 from /home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/include/soma_cube_rl_bridge/rl_env_node.hpp:4,
                 from /home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/rl_env_node.cpp:1:
/usr/include/c++/11/array:95:12: note: candidate: ‘constexpr std::array<double, 6>& std::array<double, 6>::operator=(const std::array<double, 6>&)’
   95 |     struct array
      |            ^~~~~
/usr/include/c++/11/array:95:12: note:   no known conversion for argument 1 from ‘std::vector<double, std::allocator<double> >’ to ‘const std::array<double, 6>&’
/usr/include/c++/11/array:95:12: note: candidate: ‘constexpr std::array<double, 6>& std::array<double, 6>::operator=(std::array<double, 6>&&)’
/usr/include/c++/11/array:95:12: note:   no known conversion for argument 1 from ‘std::vector<double, std::allocator<double> >’ to ‘std::array<double, 6>&&’
/home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/rl_env_node.cpp:400:12: error: ‘using element_type = struct dsr_msgs2::srv::MoveJoint_Request_<std::allocator<void> >’ {aka ‘struct dsr_msgs2::srv::MoveJoint_Request_<std::allocator<void> >’} has no member named ‘blending_type’; did you mean ‘blend_type’?
  400 |   request->blending_type = 0;
      |            ^~~~~~~~~~~~~
      |            blend_type
/home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/rl_env_node.cpp: In member function ‘bool soma_cube_rl_bridge::RLEnvironmentNode::executeAction(const std::vector<double, std::allocator<double> >&)’:
/home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/rl_env_node.cpp:424:18: error: no match for ‘operator=’ (operand types are ‘dsr_msgs2::srv::MoveJoint_Request_<std::allocator<void> >::_pos_type’ {aka ‘std::array<double, 6>’} and ‘const std::vector<double, std::allocator<double> >’)
  424 |   request->pos = processed_action;
      |                  ^~~~~~~~~~~~~~~~
In file included from /usr/include/c++/11/tuple:39,
                 from /usr/include/c++/11/bits/unique_ptr.h:37,
                 from /usr/include/c++/11/memory:76,
                 from /opt/ros/humble/include/rclcpp/rclcpp/rclcpp.hpp:153,
                 from /home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/include/soma_cube_rl_bridge/rl_env_node.hpp:4,
                 from /home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/rl_env_node.cpp:1:
/usr/include/c++/11/array:95:12: note: candidate: ‘constexpr std::array<double, 6>& std::array<double, 6>::operator=(const std::array<double, 6>&)’
   95 |     struct array
      |            ^~~~~
/usr/include/c++/11/array:95:12: note:   no known conversion for argument 1 from ‘const std::vector<double, std::allocator<double> >’ to ‘const std::array<double, 6>&’
/usr/include/c++/11/array:95:12: note: candidate: ‘constexpr std::array<double, 6>& std::array<double, 6>::operator=(std::array<double, 6>&&)’
/usr/include/c++/11/array:95:12: note:   no known conversion for argument 1 from ‘const std::vector<double, std::allocator<double> >’ to ‘std::array<double, 6>&&’
/home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/rl_env_node.cpp:430:12: error: ‘using element_type = struct dsr_msgs2::srv::MoveJoint_Request_<std::allocator<void> >’ {aka ‘struct dsr_msgs2::srv::MoveJoint_Request_<std::allocator<void> >’} has no member named ‘blending_type’; did you mean ‘blend_type’?
  430 |   request->blending_type = 0;
      |            ^~~~~~~~~~~~~
      |            blend_type
gmake[2]: *** [CMakeFiles/rl_env_node.dir/build.make:76: CMakeFiles/rl_env_node.dir/src/rl_env_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:651: CMakeFiles/rl_env_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
